Добавил трей. Улучшил логирование

--- a/GUI version/lang/en.lang
+++ b/GUI version/lang/en.lang
@@ -1,7 +1,9 @@
 alias=en
 name=English
 head=Program launch
-trackedfolder=Tracked Folder: 
+emptywordfile=The dictionary of broken words is empty !!!
+trackedfolder=Tracked Folder:
+hookedfile=Hooked file: 
 menu=Menu
 openfilebutton=Open file
 openfiledescription=Fix file
@@ -23,8 +25,8 @@ fixed=Fixed files:
 logbutton=Logging
 silent=Silent mode
 done=Done
+showwindow=Show
+closewindow=Close
 yes=Yes
 no=No
-exitmsg=Are you sure you want to go out?
-hookedfile=Hooked file: 
-emptywordfile=The dictionary of broken words is empty !!!
+exitmsg=Are you sure you want to quit?
