--- a/GUI version/lang/ru.lang
+++ b/GUI version/lang/ru.lang
@@ -25,6 +25,8 @@ fixed=Исправлено файлов:
 logbutton=Логирование
 silent=Тихий режим
 done=Готово
+showwindow=Показать
+closewindow=Закрыть
 yes=Да
 no=Нет
 exitmsg=Вы уверены, что хотите выйти?
