--- a/GUI version/lang/ru.lang
+++ b/GUI version/lang/ru.lang
@@ -1,32 +1,32 @@
-alias=ru
-name=Русский
+[LANGUAGE]
+clearbutton=Очистить окно
+cleardescription=Очистить текстовое окно
+closewindow=Закрыть
+corruptedword1=Искаженное слово: 
+corruptedword2=Исправлено на: 
+corruptedword3=Количество исправлений: 
+decode=Смена кодировки: 
+done=Готово
+emptywordfile=Словарь сломанных слов пуст!!!
+exitbutton=Выход
+exitdescription=Выйти из программы
+exitmsg=Вы уверены, что хотите выйти?
+file=Файл: 
+fixed=Исправлено файлов: 
+folder=Папка: 
+founded=Найдено файлов: 
 head=Запуск программы
-emptywordfile=Файл-словарь сломанных слов пуст!!!
-trackedfolder=Отслеж. папка: 
 hookedfile=Захваченный файл: 
+logbutton=Логирование
 menu=Меню
+no=Нет
 openfilebutton=Открыть файл
 openfiledescription=Исправить файл
 openfolderbutton=Открыть папку
 openfolderdescription=Исправить файлы в папке
-clearbutton=Очистить окно
-cleardescription=Очистить текстовое окно
-exitbutton=Выход
-exitdescription=Выйти из программы
-file=Файл: 
-time=Папка: 
-decode=Смена кодировки: 
-corruptedword1=Искаженное слово: 
-corruptedword2=Исправлено на: 
-corruptedword3=Количество исправлений: 
-folder=Папка: 
-founded=Найдено файлов: 
-fixed=Исправлено файлов: 
-logbutton=Логирование
-silent=Тихий режим
-done=Готово
 showwindow=Показать
-closewindow=Закрыть
+silent=Тихий режим
+time=Папка: 
+trackedfolder=Отслеж. папка: 
 yes=Да
-no=Нет
-exitmsg=Вы уверены, что хотите выйти?
+about =О программе
